# iceberg-practice

./: .gitignore  README.md  data_lakehosue_Iceberg_survey.md  docker-compose.yml  dremio_sql.py  load_data_iceberg.ipynb  load_data_to_iceberg.py  main.py  pyproject.toml  trino_iceberg.ipynb
sql/: 0_create_table.sql  1_insert_records.sql  2_select.sql  3_delete_record.sql  4_get_snapshot.sql  5_time_travel.sql
sql/dremio/: 0_create_table.sql  1_insert_records.sql  3_delete_record.sql
sql/trino/: iceberg_operation.sql  select_iot_event.sql
trino/: iceberg.properties
trino/sql/: create_insert_iceberg.sql
