[tool.poetry]
name = "iceberg-practice"
version = "0.1.0"
description = ""
authors = ["Mark Chang <mark.chang@vpon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
dremio-simple-query = "^0.0.4"
ipykernel = "^6.29.5"
pyiceberg = {extras = ["s3fs"], version = "^0.8.0"}
trino = "^0.330.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
